syntax = "proto3";

package contact.pb;

message ContactMsg {
  bytes peerId = 1;
  string name = 2;
  string avatar = 3;
  int64 addTs = 4;
  int64 accessTs = 5;
}